@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.63 (gritter) 1/2/06";
+	"@(#)/usr/ucb/otfdump.sl	5.64 (gritter) 1/5/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.63 (gritter) 1/2/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.63 (gritter) 1/2/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.64 (gritter) 1/5/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.64 (gritter) 1/5/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.63 (gritter) 1/2/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.64 (gritter) 1/5/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.63 (gritter) 1/2/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.64 (gritter) 1/5/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.63";
+const char revision[] = "5.64";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -45,8 +45,9 @@ troff.d/afm.h: * Sccsid @(#)afm.h	1.21 (gritter) 1/1/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.37 (gritter) 12/22/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.38 (gritter) 1/5/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.11 (gritter) 12/20/05
+troff.d/otfmac.c: * Sccsid @(#)otf.c	1.37 (gritter) 12/22/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.35 (gritter) 12/20/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.59 (gritter) 1/1/06
 troff.d/t6.c: * Sccsid @(#)t6.c	1.115 (gritter) 1/1/06
